# Spending_Analyser

./: README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: secrets.example.toml
analytics/: __init__.py  categorisation.py  categorize.py  duplicates.py  forecast.py  forecasting.py  recurring.py  summary.py
app/: __init__.py  layout.py  main.py
app/pages/: __init__.py  insights.py  overview.py
config/: __init__.py  settings.py
core/: __init__.py  analytics.py  data_loader.py  formatting.py  models.py  summary.py  summary_service.py
core/ai/: __init__.py  summary.py
data/: seed.csv  synth.py
docs/adr/: 0001-ui-config-reorg.md
lib/: ai_summary.py  categorize.py  forecast.py  recurring.py  summary.py  synth.py
prompts/: __init__.py  base.py  insights.txt  monthly_summary.txt  overview.txt
tests/: test_analytics.py  test_app_import.py
ui/: charts.py  components.py
visualization/: __init__.py  charts.py  theme.py
